fixed text not showing with color for results id

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ input{
     color: yellow;
 }
 
+#results{
+    color: yellow;
+}
+
 /* #search{
     float: right;
 } */
